<resources>
    <string name="app_name">Toddler Cartoons</string>
    <string name="settings">Settings</string>

    <string name="locked_cooldown_message">All done for now.\nYou can watch again in %1$d minutes.</string>
    <string name="locked_daily_cap_message">All done for today.\nSee you tomorrow!</string>

    <string name="all_done_title">All done! Time to play.</string>

    <string name="enter_parent_pin">Enter parent PIN</string>
    <string name="unlock">Unlock</string>
    <string name="wrong_pin">Wrong PIN</string>

    <string name="session_length_minutes">Session length (minutes)</string>
    <string name="cooldown_minutes">Wait time between sessions (minutes)</string>
    <string name="daily_cap_minutes">Total daily limit (minutes)</string>
    <string name="save">Save</string>
    <string name="reduce_daily_cap">Reduce daily limit by 5 min</string>
    <string name="invalid_values">Please enter valid numbers</string>
    <string name="settings_saved">Settings saved</string>
    <string name="daily_cap_reduced">Daily limit reduced</string>

    <string name="manage_videos">Manage Videos</string>
    <string name="add_video">+ Add Video</string>
    <string name="remove">Remove</string>
    <string name="name_this_video">Name this video</string>
    <string name="video_title_hint">e.g. Peppa Pig — Muddy Puddles</string>
    <string name="untitled_video">Untitled video</string>
    <string name="video_added">Video added</string>
    <string name="video_add_failed">Couldn\'t add that video. Try a different file.</string>
    <string name="no_videos_yet">No videos added yet. Tap \"+ Add Video\" above.</string>
    <string name="no_videos_yet_child_view">Ask a parent to add some cartoons!</string>
    <string name="confirm_remove_video">Remove \"%1$s\"?</string>
</resources>
